# pkg/api/handler/order.go
@@ -20,6 +20,8 @@ func NewOrderHandler(service services.OrderUseCase) *OrderHandler {
 	}
 }
 
+// USERS END
+//
 // PLACE A NEW ORDER
 // @Summary API FOR PLACING A NEW ORDER
 // @ID USER-PROCEED-ORDER
@@ -68,7 +70,6 @@ func (cr *OrderHandler) PlaceNewOrder(c *gin.Context) {
 
 // VIEW ORDERS
 // @Summary API FOR VIEWING ORDERS
-// @ID USER-VIEW-ORDER
 // @Description Users can view all orders.
 // @Tags ORDER
 // @Accept json
@@ -115,7 +116,6 @@ func (cr *OrderHandler) ListOrders(c *gin.Context) {
 
 // VIEW ORDERS DETAILS
 // @Summary API FOR VIEWING ORDERS DETAILS
-// @ID USER-VIEW-ORDER-DETAILS
 // @Description Users can the selected order details.
 // @Tags ORDER
 // @Accept json
@@ -128,6 +128,7 @@ func (cr *OrderHandler) ListOrders(c *gin.Context) {
 // @Failure 400 {object} utils.Response
 // @Failure 500 {object} utils.Response
 // @Router /user/orders/list/details/{order_id} [get]
+// @Router /admin/orders/list/details/{order_id} [get]
 func (cr *OrderHandler) ListOrderDetails(c *gin.Context) {
 	fmt.Println("1")
 	orderId, err := strconv.Atoi(c.Query("order_id"))
@@ -161,4 +162,71 @@ func (cr *OrderHandler) ListOrderDetails(c *gin.Context) {
 	}
 	response := utils.SuccessResponse(200, "Success: Order list", orderDetails)
 	c.JSON(http.StatusOK, response)
+}
+
+// CANCEL ORDER
+// @Summary API FOR CANCELLING A ORDER
+// @Description Users can cancel orders
+// @Tags ORDER
+// @Accept json
+// @Produce json
+// @Param order_id query uint true "Enter the order id"
+// @Param page query int false "Enter the page number to display"
+// @Param limit query int false "Number of items to retrieve per page"
+// @Success 200 {object} utils.Response
+// @Failure 401 {object} utils.Response
+// @Failure 400 {object} utils.Response
+// @Failure 500 {object} utils.Response
+// @Router /user/orders/cancel/{order_id} [post]
+func (cr *OrderHandler) CancelOrder(c *gin.Context) {
+	id, ok := c.Get("user-id")
+	if !ok {
+		response := utils.ErrorResponse(401, "Error: Failed to get the id from the token string", "", nil)
+		c.JSON(http.StatusUnauthorized, response)
+		return
+	}
+	fmt.Println("id is", id)
+}
+
+// ADMINS END
+//
+// VIEW ORDERS
+// @Summary API FOR VIEWING ORDERS
+// @Description Admin can view all orders.
+// @Tags ORDER
+// @Accept json
+// @Produce json
+// @Param page query int false "Enter the page number to display"
+// @Param limit query int false "Number of items to retrieve per page"
+// @Success 200 {object} utils.Response
+// @Failure 401 {object} utils.Response
+// @Failure 400 {object} utils.Response
+// @Failure 500 {object} utils.Response
+// @Router /admin/orders/list/all [get]
+func (cr *OrderHandler) AdminListOrders(c *gin.Context) {
+
+	page, err := strconv.Atoi(c.Query("page"))
+	if err != nil {
+		page = 1 // Default page number is 1 if not provided
+	}
+
+	limit, err := strconv.Atoi(c.Query("limit"))
+	if err != nil || limit <= 0 {
+		limit = 3 // Default limit is 3 items if not provided or if an invalid value is entered
+	}
+
+	offset := (page - 1) * limit
+	pagination := utils.Pagination{
+		Offset: uint(offset),
+		Limit:  uint(limit),
+	}
+	orderList, err := cr.orderUseCase.AdminListOrders(c.Request.Context(), pagination)
+	if err != nil {
+		response := utils.ErrorResponse(500, "Error: Failed to list order list", err.Error(), nil)
+		c.JSON(http.StatusInternalServerError, response)
+		return
+	}
+	response := utils.SuccessResponse(200, "Success: Order list", orderList)
+	c.JSON(http.StatusOK, response)
+
 }
